fix some layout issues

--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -95,8 +95,8 @@
   }
   .tab button{
     width: 60%;
-    margin-top: 167px;
-    margin-bottom: -80px;
+    margin-top: 205px;
+    margin-bottom: -120px;
   }
 }
 .text
